--- a/docs/v0.2.0.md
+++ b/docs/v0.2.0.md
@@ -9,7 +9,7 @@
 class AdditionNode(Node):
     def edge_activated(self, edge):
         inputs = [edge.get_data() for edge in self.input_edges]
-        self.output_edges[0].set_data(sum(inputs))
+        self.output_edges[0].push_data(sum(inputs))
 ```
 
 
