--- a/docs/v0.2.0.md
+++ b/docs/v0.2.0.md
@@ -60,7 +60,7 @@ run_in_background() 、 run_directly() 和都不使用的比較:
 
 ### Extensions
 
-Extension 是裡面定義很多 node 的 python package。使用者可以在前端選擇要 import 的 extension，然後就可以使用 extension 裡面的 node。Builtin_nodes 是一個無法移除的 extension。例如 grapycal_ext1 裡面定義了除法 node
+Extension 是裡面定義很多 node 的 python package。使用者可以在前端選擇要 import 的 extension，然後就可以使用 extension 裡面的 node。grapycal_builtin 是一個無法移除的 extension。例如 grapycal_ext1 裡面定義了除法 node
 
 ![Alt text](image.png)
 
